# hydra-template

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/src/: __init__.py  __main__.py  config.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: {{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/config/: default_config.yaml
